namespace Ada.FirstCatering.API.Models.Responses;

public class TopUpResponse
{
    public decimal OldBalance { get; set; }
    public decimal NewBalance { get; set; }
}